--- a/index.html
+++ b/index.html
@@ -34,11 +34,12 @@
       property="og:description"
       content="Anyone, from anyone advice to messages and many more, find here. Have fun and enjoy Anyone."
     />
-    <meta property="og:url" content="https://www.cisformation.com" />
+    <meta property="og:url" content="https://flocode.github.io/anyome" />
     <meta
       property="og:image"
       content="https://flocode.github.io/anyome/images/preview.jpg"
     />
+    <meta property="og:image:type" content="image/jpg">
 
     <!-- <script src="https://kit.fontawesome.com/e75ff8fc88.js" crossorigin="anonymous"></script> -->
     <link
