--- a/index.html
+++ b/index.html
@@ -11,36 +11,24 @@
     <title>
       Anyone | Send Message to anyone
     </title>
-    <meta
-      name="keywords"
-      content="CIS, Centre, Formation, Professionnelle, Cameroun, Cameroon, Institut, Diplôme, Qualification, Attestation, MINEFOP, Ministère, Emploi, Stage, Placement, www.cisformation.com"
-    />
-    <meta
-      name="description"
-      content="Anyone, from anyone advice to messages and many more, find here. Have fun and enjoy Anyone."
-    />
+   <!-- Primary Meta Tags -->
+<title>Anyone | Send Message to anyone</title>
+<meta name="title" content="Anyone | Send Message to anyone">
+<meta name="description" content="Anyone, from anyone advice to messages and many more, find here. Have fun and enjoy Anyone.">
 
-    <meta
-      name="thumbnail"
-      content="https://flocode.github.io/anyome/images/preview.jpg"
-    />
-    <meta property="og:site_name" content="Anyone" />
-    <meta
-      property="og:title"
-      content="Anyone | Send Message to anyone"
-    />
-    <meta property="og:type" content="Education" />
-    <meta
-      property="og:description"
-      content="Anyone, from anyone advice to messages and many more, find here. Have fun and enjoy Anyone."
-    />
-    <meta property="og:url" content="https://flocode.github.io/anyome" />
-    <meta
-      property="og:image"
-      content="https://flocode.github.io/anyome/images/preview.jpg"
-    />
-    <meta property="og:image:type" content="image/jpg">
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://flocod.github.io/anyone/">
+<meta property="og:title" content="Anyone | Send Message to anyone">
+<meta property="og:description" content="Anyone, from anyone advice to messages and many more, find here. Have fun and enjoy Anyone.">
+<meta property="og:image" content="https://flocode.github.io/anyome/images/preview.jpg">
 
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://flocod.github.io/anyone/">
+<meta property="twitter:title" content="Anyone | Send Message to anyone">
+<meta property="twitter:description" content="Anyone, from anyone advice to messages and many more, find here. Have fun and enjoy Anyone.">
+<meta property="twitter:image" content="https://flocode.github.io/anyome/images/preview.jpg">
     <!-- <script src="https://kit.fontawesome.com/e75ff8fc88.js" crossorigin="anonymous"></script> -->
     <link
       rel="shortcut icon"
