--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 <meta property="og:url" content="https://flocod.github.io/anyone/">
 <meta property="og:title" content="Anyone | Send Message to anyone">
 <meta property="og:description" content="Anyone, from anyone advice to messages and many more, find here. Have fun and enjoy Anyone.">
-<meta property="og:image" content="https://flocode.github.io/anyome/images/preview.jpg">
+<meta property="og:image" content="https://flocode.github.io/anyome/images/preview.jpg?v=1?v=1">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://flocod.github.io/anyone/">
 <meta property="twitter:title" content="Anyone | Send Message to anyone">
 <meta property="twitter:description" content="Anyone, from anyone advice to messages and many more, find here. Have fun and enjoy Anyone.">
-<meta property="twitter:image" content="https://flocode.github.io/anyome/images/preview.jpg">
+<meta property="twitter:image" content="https://flocode.github.io/anyome/images/preview.jpg?v=1">
     <!-- <script src="https://kit.fontawesome.com/e75ff8fc88.js" crossorigin="anonymous"></script> -->
     <link
       rel="shortcut icon"
