--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <meta property="og:url" content="https://flocod.github.io/anyone/">
 <meta property="og:title" content="Anyone | Send Message to anyone">
 <meta property="og:description" content="Anyone, from anyone advice to messages and many more, find here. Have fun and enjoy Anyone.">
-<meta property="og:image" content="https://flocode.github.io/anyome/images/preview.jpg?v=1?v=1">
+<meta property="og:image" content="https://flocode.github.io/anyome/images/preview.jpg?v=1">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
