--- a/index.html
+++ b/index.html
@@ -1,34 +1,43 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="theme-color" content="#282a37">
+    <meta name="theme-color" content="#282a37" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>
-      Anyone | Send Message to anyone
-    </title>
-   <!-- Primary Meta Tags -->
-<title>Anyone | Send Message to anyone</title>
-<meta name="title" content="Anyone | Send Message to anyone">
-<meta name="description" content="Anyone, from anyone advice to messages and many more, find here. Have fun and enjoy Anyone.">
-
-<!-- Open Graph / Facebook -->
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://flocod.github.io/anyone/">
-<meta property="og:title" content="Anyone | Send Message to anyone">
-<meta property="og:description" content="Anyone, from anyone advice to messages and many more, find here. Have fun and enjoy Anyone.">
-<meta property="og:image" content="https://flocode.github.io/anyome/images/preview.jpg?v=1">
-
-<!-- Twitter -->
-<meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://flocod.github.io/anyone/">
-<meta property="twitter:title" content="Anyone | Send Message to anyone">
-<meta property="twitter:description" content="Anyone, from anyone advice to messages and many more, find here. Have fun and enjoy Anyone.">
-<meta property="twitter:image" content="https://flocode.github.io/anyome/images/preview.jpg?v=1">
+    <title>Anyone | Send Message to anyone</title>
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Anyone | Send Message to anyone" />
+    <meta
+      name="description"
+      content="Anyone, from anyone advice to messages and many more, find here. Have fun and enjoy Anyone."
+    />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://flocod.github.io/anyone/" />
+    <meta property="og:title" content="Anyone | Send Message to anyone" />
+    <meta
+      property="og:description"
+      content="Anyone, from anyone advice to messages and many more, find here. Have fun and enjoy Anyone."
+    />
+    <meta
+      property="og:image"
+      content="https://flocode.github.io/anyome/images/preview.jpg?v=1"
+    />
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://flocod.github.io/anyone/" />
+    <meta property="twitter:title" content="Anyone | Send Message to anyone" />
+    <meta
+      property="twitter:description"
+      content="Anyone, from anyone advice to messages and many more, find here. Have fun and enjoy Anyone."
+    />
+    <meta
+      property="twitter:image"
+      content="https://flocode.github.io/anyome/images/preview.jpg?v=1"
+    />
     <!-- <script src="https://kit.fontawesome.com/e75ff8fc88.js" crossorigin="anonymous"></script> -->
     <link
       rel="shortcut icon"
@@ -73,7 +82,8 @@
           <div class="citation">
             <div class="text">
               "
-              <span class="value">Great ideas often receive violent opposition from mediocre
+              <span class="value"
+                >Great ideas often receive violent opposition from mediocre
                 minds</span
               >
               "
@@ -118,8 +128,6 @@
                   <div class="item_msg_box_time">08:31 AM</div>
                 </div>
 
-
-                
                 <div class="item_msg send">
                   <div class="item_msg_box">
                     Nothing, I m just working on CFACASH project.
@@ -232,27 +240,39 @@
                   <div class="item_msg_box">Nothing</div>
                   <div class="item_msg_box_time">08:31 AM</div>
                 </div>
-
               </div>
-
-
             </div>
 
             <div class="writting">
-              <div class="alert_action alert">Someone is typing…</div>
+              <div class="alert_action">Someone is typing…</div>
               <div class="input_box">
-                <textarea id="input_message" name="" placeholder="Enter message" ></textarea>
-                <div id="btn_send" class="btn_send"> 
-                   <img src="images/send.svg" alt="">
+                <textarea
+                  id="input_message"
+                  name=""
+                  placeholder="Enter message"
+                ></textarea>
+                <div id="btn_send" class="btn_send">
+                  <img src="images/send.svg" alt="" />
                 </div>
               </div>
             </div>
-
-
           </div>
         </div>
       </div>
     </div>
+
+    <audio
+      id="send"
+      onload="this.pause();"
+      style="visibility: hidden"
+      src="sons/send.mp3"
+    ></audio>
+    <audio
+      id="message"
+      onload="this.pause();"
+      style="visibility: hidden"
+      src="sons/message.mp3"
+    ></audio>
 
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
