--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
             </div>
 
             <div id="chat_container" class="chat_container">
-              <div class="chat_container_struct">
-                <div class="item_msg receive">
+              <div id="message_root" class="chat_container_struct">
+                <!-- <div class="item_msg receive">
                   <div class="item_msg_box">
                     Nothing, I m just working on CFACASH project.
                   </div>
@@ -239,7 +239,7 @@
                 <div class="item_msg send">
                   <div class="item_msg_box">Nothing</div>
                   <div class="item_msg_box_time">08:31 AM</div>
-                </div>
+                </div> -->
               </div>
             </div>
 
@@ -273,6 +273,8 @@
       style="visibility: hidden"
       src="sons/message.mp3"
     ></audio>
+
+    
 
     <script
       src="https://code.jquery.com/jquery-3.6.0.min.js"
