ajout des fonnctionnalité

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     />
     <meta
       property="og:image"
-      content="https://flocode.github.io/anyome/images/preview.jpg?v=1"
+      content="https://flocod.github.io/anyone/images/preview.jpg?v=1"
     />
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -36,7 +36,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://flocode.github.io/anyome/images/preview.jpg?v=1"
+      content="https://flocod.github.io/anyone/images/preview.jpg?v=1"
     />
     <!-- <script src="https://kit.fontawesome.com/e75ff8fc88.js" crossorigin="anonymous"></script> -->
     <link
