ajout des fonnctionnalité

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     />
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body theme="sunny" class="body theme">
+  <body theme="sunny" class="body theme" text_color="">
     <div class="main">
       <div id="background" class="image_fond filter_bg">
         <!-- <img src="https://source.unsplash.com/random/1920×1158/?sunny" alt="background" /> -->
