--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       href="https://flocode.github.io/anyome/images/favicon.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/style.css?v=2" />
   </head>
   <body theme="sunny" class="body theme" text_color="">
     <div class="main">
