--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
             </div>
 
             <div class="writting">
-              <div class="alert_action">Someone is typing…</div>
+              <div id="alert_action" class="alert_action">Someone is typing…</div>
               <div class="input_box">
                 <textarea
                   id="input_message"
@@ -282,6 +282,6 @@
       integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
       crossorigin="anonymous"
     ></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/main.js?v=2"></script>
   </body>
 </html>
